# PaperSight

./: .gitignore  AGENTS.md  README.md  agent.md  gemmasight.db  pyproject.toml  triage_rules.json
mock-frontend/: index.html
scripts/: populate_db.py
src/gemmasight/: database.py  main.py  schema.py  triage_engine.py
src/papersight/: database.py  main.py  schema.py  triage_engine.py
static/: index.html
static/css/: theme.css
static/js/: api.js  dom.js  feedback.js  format.js  main.js  modal.js  render.js  tailwind-config.js
tests/: test_api.py
tests/fixtures/: form_generator.py  generate_clear_form.py  generate_forms.py  generate_minimal_form.py
